# ROMA

./: .dockerignore  .env.example  .gitignore  Dockerfile  QUICKSTART.md  README.md  REFACTORING_NOTES.md  docker-compose.yaml  example.ipynb  justfile  new_prompt_optim.ipynb  prompt_optimization.ipynb  pyproject.toml  pytest.ini  run  sentient.yaml  setup.sh  test_aggregation_visualizer.py
roma/: .env.example  .gitignore  LICENSE  README.md  justfile  pyproject.toml  pytest.ini
roma/config/: config.yaml
roma/config/agents/: aggregators.yaml  atomizers.yaml  executors.yaml  plan_modifiers.yaml  planners.yaml
roma/config/entities/models/: providers.yaml
roma/config/entities/tools/: definitions.yaml
roma/config/infrastructure/: development.yaml  production.yaml
roma/config/profiles/: crypto_profile.yaml  general_profile.yaml  research_profile.yaml  simple_profile.yaml
roma/docs/: API_KEY_MANAGEMENT.md  ARCHITECTURE_DETAILED.md  ARCHITECTURE_VERIFICATION.md  ENHANCED_DEPENDENCY_RESOLUTION.md  FINAL_ARCHITECTURE.md  IMPLEMENTATION_STATUS.md  PROMPT_SYSTEM.md  README.md  ROMA_V2_TASK_PLAN.json  improvements.md
roma/src/: __init__.py
roma/src/prompts/: README.md
roma/src/prompts/aggregator/: aggregator.jinja2
roma/src/prompts/atomizer/: atomizer.jinja2  retrieve.jinja2
roma/src/prompts/base/: base_agent.jinja2  base_context.jinja2  helpers.jinja2
roma/src/prompts/executor/: code_interpret_executor.jinja2  image_generation_executor.jinja2  retrieve_executor.jinja2  think_executor.jinja2  write_executor.jinja2
roma/src/prompts/helpers/: constraints_display.jinja2  dependency_display.jinja2  prior_work_display.jinja2  task_type_info.jinja2  temporal_awareness.jinja2  tools_listing.jinja2
roma/src/prompts/plan_modifier/: plan_modifier.jinja2
roma/src/prompts/planner/: planner.jinja2
roma/src/roma/: __init__.py  __main__.py  framework_entry.py
roma/src/roma/application/: __init__.py
roma/src/roma/application/orchestration/: __init__.py  execution_orchestrator.py  graph_state_manager.py  parallel_execution_engine.py  parallel_execution_engine_old.py  system_manager.py  task_node_processor.py
roma/src/roma/application/services/: __init__.py  agent_runtime_service.py  agent_service_registry.py  aggregator_service.py  artifact_service.py  atomizer_service.py  checkpoint_service.py  context_builder_service.py  deadlock_detector.py  dependency_validator.py  event_publisher.py  event_store.py  execution_context.py  execution_history_service.py  executor_service.py  graph_traversal_service.py  hitl_service.py  knowledge_store_service.py  plan_modifier_service.py  planner_service.py  recovery_manager.py
roma/src/roma/domain/: __init__.py
roma/src/roma/domain/context/: __init__.py  task_context.py
roma/src/roma/domain/entities/: __init__.py  media_file.py  task_node.py
roma/src/roma/domain/events/: __init__.py  task_events.py
roma/src/roma/domain/graph/: __init__.py  dynamic_task_graph.py
roma/src/roma/domain/interfaces/: __init__.py  agent.py  agent_factory.py  agent_runtime_service.py  agent_service.py  artifact_service.py  config_loader.py  configurable_agent.py  event_publisher.py  event_store.py  framework_adapter.py  graph_state_manager.py  knowledge_store_service.py  recovery_manager.py  storage.py  toolkit_manager.py  toolkit_registry.py
roma/src/roma/domain/value_objects/: __init__.py  agent_responses.py  agent_type.py  child_evaluation_result.py  circuit_breaker_state.py  context_item_type.py  deadlock_analysis.py  dependency_status.py  execution_result.py  execution_state.py  hitl_request.py  knowledge_record.py  media_type.py  node_action.py  node_result.py  node_type.py  recovery_action.py  recovery_result.py  relationship_type.py  result_envelope.py  storage_config.py  task_status.py  task_type.py  toolkit_config.py
roma/src/roma/infrastructure/: __init__.py
roma/src/roma/infrastructure/adapters/: __init__.py  agno_adapter.py
roma/src/roma/infrastructure/agents/: agent_factory.py  configurable_agent.py
roma/src/roma/infrastructure/config/: __init__.py  hydra_integration.py
roma/src/roma/infrastructure/models/: model_factory.py
roma/src/roma/infrastructure/orchestration/: system_manager.py
roma/src/roma/infrastructure/persistence/: __init__.py  connection_manager.py  db_manager.py  postgres_event_store.py
roma/src/roma/infrastructure/prompts/: __init__.py  prompt_template_manager.py
roma/src/roma/infrastructure/storage/: __init__.py  local_storage.py  storage_interface.py
roma/src/roma/infrastructure/toolkits/: __init__.py  agno_toolkit_manager.py  base_agno_toolkit.py  toolkit_loader.py
roma/src/roma/infrastructure/utils/: __init__.py  async_file_utils.py
roma/src/roma/presentation/api/: __init__.py  main.py
roma/src/roma/presentation/cli/: __init__.py  main.py
roma/src/roma/tools/: __init__.py  graph_visualizer.py
roma/tests/: __init__.py  conftest.py
roma/tests/integration/: test_agno_toolkit_integration.py  test_event_store.py  test_graph_integration.py  test_system_integration.py
roma/tests/integration/orchestration/: test_dependency_execution_flow.py  test_execution_config_integration.py
roma/tests/integration/persistence/: test_postgres_integration.py
roma/tests/unit/application/: __init__.py  test_context_builder_enhanced.py  test_context_builder_service.py
roma/tests/unit/application/orchestration/: __init__.py  test_bug_scenarios.py  test_execution_orchestrator.py  test_graph_state_manager.py  test_parallel_execution_engine.py  test_utils.py
roma/tests/unit/application/services/: test_agent_runtime_service.py  test_agent_service_registry.py  test_aggregator_service.py  test_artifact_service.py  test_atomizer_service.py  test_deadlock_detector.py  test_dependency_validator.py  test_event_store_edge_cases.py  test_executor_service.py  test_graph_traversal_service.py  test_hitl_service.py  (+4 more)
roma/tests/unit/domain/: __init__.py  test_task_node.py  test_task_type.py
roma/tests/unit/infrastructure/: test_local_storage.py
roma/tests/unit/tools/: __init__.py  test_graph_visualizer.py
(+231 files in other folders)
