[project]
name = "roma-dspy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "salzubi401", email = "salaheddin@sentient.xyz" }
]
requires-python = ">=3.12"
dependencies = [
    "dspy>=3.0.3",
    "ipykernel>=6.30.1",
    "pydantic>=2.11.9",
]

[project.scripts]
roma-dspy = "roma_dspy:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
